<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_line"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_lower_line"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chose_division"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center">


                        <EditText
                            android:id="@+id/editTextTextPersonName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@drawable/bg_button"
                            android:gravity="center"
                            android:hint="@string/hint_search"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/search_fab"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="50dp"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/submit"
                            android:src="@drawable/search"
                            app:fabCustomSize="100dp"
                            app:maxImageSize="50dp"
                            app:backgroundTint="@color/black"
                            app:borderWidth="1dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="start|center"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cacheColorHint="#ABABAB"
                        android:clipToPadding="false"
                        android:dividerHeight="5dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fub"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/submit"
        android:src="@drawable/ic_add_fab"
        app:fabCustomSize="100dp"
        app:maxImageSize="50dp"
        app:backgroundTint="@color/black"
        app:borderWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>